syntax = "proto3";
package ciao.time_tracking;

import "ciao/common/timestamp.proto";

message ClockRecord {
  // Timestamp from the terminal
  ciao.common.Timestamp timestamp = 1;

  // User id or badge id of the person clocking
  oneof identity {
    string user_id = 2;
    string badge_id = 3;
  }

  // The device id of the terminal (optional, if no device involved with clocking)
  optional string device_id = 4;
  // The time type id to clock on
  optional string time_type_id = 5;

  // Optional additional data for the clock record
  optional string project_id = 100;
  optional string cost_center_id = 101;
  optional string project_task_id = 102;

  // Unique identifier (will be set by the backend and is only relevant for queries,
  // will be ignored when clocking)
  optional string id = 200;
}
